# dissonance-core

./: CMakeLists.txt
.github/workflows/: ci.yml
docs/: deployment.md  technology_environment.md
include/: WavParser.hpp
tests/: wav_parser_and_gui_test.cpp
